--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
 
     <title>React Redux App</title>
   </head>
-  <body>
+  <body data-smooth-scroll-offset="77">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
