--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,16 +5,16 @@
     <title>Mocky: The world easiest & fastest tool belts to mock your APIs</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="%PUBLIC_URL%/css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
+    <link href="%PUBLIC_URL%/css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
     <link href="%PUBLIC_URL%/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
     <link href="%PUBLIC_URL%/css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
     <link href="%PUBLIC_URL%/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="%PUBLIC_URL%/css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
     <link href="%PUBLIC_URL%/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="%PUBLIC_URL%/css/custom.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet" />
 
     <title>React Redux App</title>
   </head>
@@ -22,10 +22,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="%PUBLIC_URL%/js/jquery-3.1.1.min.js"></script>
+    <!--
     <script src="%PUBLIC_URL%/js/parallax.js"></script>
     <script src="%PUBLIC_URL%/js/granim.min.js"></script>
     <script src="%PUBLIC_URL%/js/smooth-scroll.min.js"></script>
     <script src="%PUBLIC_URL%/js/scripts.js"></script>
+    -->
   </body>
 </html>
